Fix spacing of icons, make muted text not apply on mouse hover

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -56,7 +56,7 @@
     &.text-danger {
         .text-emphasis-variant(@state-danger-text);
     }
-    &.text-muted {
+    &.text-muted:not(:hover) {
         .text-emphasis-variant(@text-muted);
     }
 }
